--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
                                         class="icon-right-arrow"></span></a>
                             </div>
                         </div>
-                        <div class="main-slider-two__video">
+                        <!-- <div class="main-slider-two__video">
                             <a href="https://www.youtube.com/shorts/cVfi3L9t7nA" class="video-popup">
                                 <div class="main-slider-two__video-icon">
                                     <span class="fa fa-play"></span>
                                     <i class="ripple"></i>
                                 </div>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
@@ -224,14 +224,14 @@
                                         class="icon-right-arrow"></span></a>
                             </div>
                         </div>
-                        <div class="main-slider-two__video">
+                        <!-- <div class="main-slider-two__video">
                             <a href="https://www.youtube.com/shorts/cVfi3L9t7nA" class="video-popup">
                                 <div class="main-slider-two__video-icon">
                                     <span class="fa fa-play"></span>
                                     <i class="ripple"></i>
                                 </div>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
@@ -253,14 +253,14 @@
                                         class="icon-right-arrow"></span></a>
                             </div>
                         </div>
-                        <div class="main-slider-two__video">
+                        <!-- <div class="main-slider-two__video">
                             <a href="https://www.youtube.com/shorts/cVfi3L9t7nA" class="video-popup">
                                 <div class="main-slider-two__video-icon">
                                     <span class="fa fa-play"></span>
                                     <i class="ripple"></i>
                                 </div>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
