--- a/index.html
+++ b/index.html
@@ -334,17 +334,10 @@
                                 <div class="section-title__tagline-box">
                                     <p class="section-title__tagline">About Us</p>
                                 </div>
-                                <h2 class="section-title__title">We help to get Solutions!</h2>
+                                <h2 class="section-title__title">Who Are We ?</h2>
                             </div>
                             <div class="about-two__content-title">
-                                <h3>professional activities to produce and sell goods or services for profit.</h3>
-                            </div>
-                            <div class="about-two__content-text">
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                    unknown printer.
-                                </p>
+                                <h3>Index Consultation is a company specialized at providing Consultations at Human Resources field and we are sole at the following fields:</h3>
                             </div>
                             <div class="about-two__content-inner">
                                 <div class="row">
@@ -355,7 +348,7 @@
                                                     <span class="icon-arrows"></span>
                                                 </div>
                                                 <div class="text">
-                                                    <p>Business And Consulting Agency</p>
+                                                    <p>Social Insurance</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -363,7 +356,7 @@
                                                     <span class="icon-arrows"></span>
                                                 </div>
                                                 <div class="text">
-                                                    <p>Awards Winning Business Comapny</p>
+                                                    <p>Salaries Structuring </p>
                                                 </div>
                                             </li>
                                             <li>
@@ -371,7 +364,7 @@
                                                     <span class="icon-arrows"></span>
                                                 </div>
                                                 <div class="text">
-                                                    <p>Down to Earth Consulting</p>
+                                                    <p>Human Resources Consultations</p>
                                                 </div>
                                             </li>
                                         </ul>
@@ -383,7 +376,7 @@
                                                     <span class="icon-arrows"></span>
                                                 </div>
                                                 <div class="text">
-                                                    <p>Strategic Advisers for Excellence</p>
+                                                    <p>Ministry of Manpower</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -391,7 +384,7 @@
                                                     <span class="icon-arrows"></span>
                                                 </div>
                                                 <div class="text">
-                                                    <p>Cut Through Noise to Find Clarity</p>
+                                                    <p>Recruitment of Foreign Labor</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -406,6 +399,16 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="about-two__content-title mt-4">
+                                <h3>
+                                    All previously mentioned Services are to be provided by a constellation of professional consultants all over the country.
+                                </h3>
+                            </div>
+                            <div class="about-two__content-text">
+                                <p>
+                                    They also provide all the solutions for all problems that could face your respectful company.
+                                </p>
+                            </div>
                             <ul class="about-two__content-list list-unstyled">
                                 <li>
                                     <div class="about-two__content-list-count count-box">
@@ -415,7 +418,7 @@
                                         <p>Years Of <br>Experience</p>
                                     </div>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <div class="about-two__content-list-count count-box">
                                         <h3 class="count-text" data-stop="520" data-speed="1500">00</h3>
                                         <span>k</span>
@@ -423,8 +426,8 @@
                                     <div class="about-two__content-list-text">
                                         <p>Completed <br>project</p>
                                     </div>
-                                </li>
-                                <li>
+                                </li> -->
+                                <!-- <li>
                                     <div class="about-two__content-list-count count-box">
                                         <h3 class="count-text" data-stop="90" data-speed="1500">00</h3>
                                         <span>%</span>
@@ -432,7 +435,7 @@
                                     <div class="about-two__content-list-text">
                                         <p>Happy <br>Customer</p>
                                     </div>
-                                </li>
+                                </li> -->
                             </ul>
                             <div class="about-two__content-btn">
                                 <a href="about.html" class="thm-btn">Learn About Us<span
@@ -442,22 +445,22 @@
                     </div>
                     <div class="col-xl-6">
                         <div class="about-two__img">
-                            <div class="about-two__img-award">
+                            <!-- <div class="about-two__img-award">
                                 <div class="icon">
                                     <span class="icon-badge"></span>
                                 </div>
                                 <h3>2020 year 21st Bangladesh <br>Business Awards.</h3>
-                            </div>
+                            </div> -->
                             <div class="about-two__img-inner">
                                 <img src="assets/images/resources/about-two-img-1.jpg" alt="Image">
-                                <div class="about-two__img-video">
+                                <!-- <div class="about-two__img-video">
                                     <a href="https://www.youtube.com/shorts/cVfi3L9t7nA" class="video-popup">
                                         <div class="about-two__img-video-icon">
                                             <span class="fa fa-play"></span>
                                             <i class="ripple"></i>
                                         </div>
                                     </a>
-                                </div>
+                                </div> -->
                                 <div class="about-two__img-line about-two__img-line1"></div>
                                 <div class="about-two__img-line about-two__img-line2"></div>
                             </div>
@@ -571,12 +574,10 @@
                                         <span class="icon-teamwork"></span>
                                         <div class="services-two__icon-shape"></div>
                                     </div>
-                                    <h3 class="services-two__title"><a href="services-details.html">Customer
-                                            <br> Engagement</a></h3>
-                                    <p class="services-two__text">Parturient aliquet risus primis nons eudu tincidunt
-                                        arcu laoree integer pellen tesque aliquet</p>
+                                    <h3 class="services-two__title"><a href="services-details.html">Social <br> Insurance</a></h3>
+                                    <p class="services-two__text line-clamp-3">Index Consultation Co,. will provide all the legal consultations at the field of Human Resources in accordance with the rapid changes that happens to the social Insurance Law. We will also provide you with all means of Technical Support for solving any problem that might happen during your dealing with the General Authorization of Social Insurance.</p>
                                     <a href="services-details.html" class="services-two__btn">service details<span
-                                            class="icon-right-arrow"></span></a>
+                                        class="icon-right-arrow"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -594,10 +595,8 @@
                                         <span class="icon-coin-stack"></span>
                                         <div class="services-two__icon-shape"></div>
                                     </div>
-                                    <h3 class="services-two__title"><a href="services-details.html">Business
-                                            <br> Opportunities</a></h3>
-                                    <p class="services-two__text">Parturient aliquet risus primis nons eudu tincidunt
-                                        arcu laoree integer pellen tesque aliquet</p>
+                                    <h3 class="services-two__title"><a href="services-details.html">Salaries <br> Structuring </a></h3>
+                                    <p class="services-two__text line-clamp-3">This will be done through the ability to activating and applying the system of scheduling and structuring the salaries according to some criteria to decrease the amount of the monthly instalment of the organization with warrantee of all structuring procedures legality.</p>
                                     <a href="services-details.html" class="services-two__btn">service details<span
                                             class="icon-right-arrow"></span></a>
                                 </div>
@@ -605,6 +604,10 @@
                         </div>
                         <!--Services Two Single End-->
                     </div>
+                </div>
+                <div class="about-two__content-btn mt-5 text-center">
+                <a href="services.html" class="thm-btn">All Services<span
+                    class="icon-right-arrow"></span></a>
                 </div>
             </div>
         </section>
