--- a/services.html
+++ b/services.html
@@ -271,8 +271,8 @@
                 <div class="services-one__content">
                   <h3 class="services-one__title">
                     <a href="services-details.html"
-                      >Business <br />
-                      process Service</a
+                      >Social <br />
+                      Insurance</a
                     >
                   </h3>
                   <a
@@ -296,8 +296,8 @@
                 <div class="services-one__content">
                   <h3 class="services-one__title">
                     <a href="services-details.html"
-                      >Financial <br />
-                      Service Advisory</a
+                      >Salaries <br />
+                      Structuring</a
                     >
                   </h3>
                   <a
@@ -321,8 +321,8 @@
                 <div class="services-one__content">
                   <h3 class="services-one__title">
                     <a href="services-details.html"
-                      >Learning & <br />
-                      Development</a
+                      >Human Resources <br />
+                      Consultations</a
                     >
                   </h3>
                   <a
@@ -346,8 +346,8 @@
                 <div class="services-one__content">
                   <h3 class="services-one__title">
                     <a href="services-details.html"
-                      >Mergers & <br />
-                      Acquisitions</a
+                      >Ministry of <br />
+                      Labor</a
                     >
                   </h3>
                   <a
@@ -371,8 +371,8 @@
                 <div class="services-one__content">
                   <h3 class="services-one__title">
                     <a href="services-details.html"
-                      >Peoples <br />
-                      & Organization</a
+                      >Foreign Labor <br />
+                      Recruitment</a
                     >
                   </h3>
                   <a
@@ -396,8 +396,8 @@
                 <div class="services-one__content">
                   <h3 class="services-one__title">
                     <a href="services-details.html"
-                      >Employee <br />
-                      benefit service</a
+                      >Health <br />
+                      Insurance</a
                     >
                   </h3>
                   <a
@@ -421,8 +421,8 @@
                 <div class="services-one__content">
                   <h3 class="services-one__title">
                     <a href="services-details.html"
-                      >Financial <br />
-                      Service Advisory</a
+                      >Professional <br />
+                      Service</a
                     >
                   </h3>
                   <a
