--- a/services-details-2.html
+++ b/services-details-2.html
@@ -110,30 +110,6 @@
                 </div>
               </li>
             </ul>
-            <div class="main-header-two__top-right">
-              <div class="main-header-two__top-opening-hours">
-                <div class="main-header-two__top-opening-hours-icon">
-                  <span class="icon-clock"></span>
-                </div>
-                <p class="main-header-two__top-opening-hours-text">
-                  Opening Hours: Mon - Fri: 09:00 - 05:00
-                </p>
-              </div>
-              <ul class="main-header-two__social list-unstyled">
-                <li>
-                  <a href="#"><span class="icon-facebook-app-symbol"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="icon-social"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="icon-instagram"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="icon-linkedin"></span></a>
-                </li>
-              </ul>
-            </div>
           </div>
         </div>
         <nav class="main-menu main-menu-two">
@@ -157,7 +133,7 @@
                     <li>
                       <a href="about.html">About</a>
                     </li>
-                    <li class="dropdown">
+                    <!-- <li class="dropdown">
                       <a href="#">Pages</a>
                       <ul>
                         <li><a href="team.html">Team</a></li>
@@ -184,9 +160,9 @@
                         <li><a href="faq.html">Faq</a></li>
                         <li><a href="404.html">404 Error</a></li>
                       </ul>
-                    </li>
+                    </li> -->
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="news.html">News</a></li>
+                    <!-- <li><a href="news.html">News</a></li> -->
                     <li>
                       <a href="contact.html">Contact</a>
                     </li>
@@ -205,15 +181,15 @@
                     <span class="icon-telephone-call"></span>
                   </div>
                   <div class="main-menu-two__call-content">
-                    <p class="main-menu-two__call-sub-title">Free Call</p>
+                    <p class="main-menu-two__call-sub-title">Call Now</p>
                     <h5 class="main-menu-two__call-number">
                       <a href="tel:+201013714343">+20 101 3714 343</a>
                     </h5>
                   </div>
                 </div>
                 <div class="main-menu-two__btn-box">
-                  <a href="contact.html" class="main-menu-two__btn thm-btn"
-                    >Free Quote<span class="icon-right-arrow"></span
+                  <a href="index-ar.html" class="main-menu-two__btn thm-btn"
+                    >Ar<span class="icon-right-arrow"></span
                   ></a>
                 </div>
               </div>
@@ -603,7 +579,7 @@
             <div class="site-footer__middle-inner">
               <div class="row">
                 <div
-                  class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp"
+                  class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp"
                   data-wow-delay="100ms"
                 >
                   <div class="footer-widget__column footer-widget__about">
@@ -627,7 +603,7 @@
                   </div>
                 </div>
                 <div
-                  class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp"
+                  class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp"
                   data-wow-delay="200ms"
                 >
                   <div class="footer-widget__column footer-widget__services">
@@ -657,7 +633,7 @@
                   </div>
                 </div>
                 <div
-                  class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp"
+                  class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp"
                   data-wow-delay="200ms"
                 >
                   <div class="footer-widget__column footer-widget__contact">
@@ -681,61 +657,6 @@
                     </ul>
                   </div>
                 </div>
-                <div
-                  class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp"
-                  data-wow-delay="300ms"
-                >
-                  <div class="footer-widget__column footer-widget__newsletter">
-                    <div class="footer-widget__title-box">
-                      <h3 class="footer-widget__title">Newsletter</h3>
-                    </div>
-                    <form class="footer-widget__newsletter-form">
-                      <div class="footer-widget__newsletter-input-box">
-                        <input
-                          type="email"
-                          placeholder="Email here*"
-                          name="email"
-                        />
-                        <button
-                          type="submit"
-                          class="footer-widget__newsletter-btn"
-                        >
-                          <i class="icon-arrows"></i>
-                        </button>
-                      </div>
-                    </form>
-                    <div class="checked-box">
-                      <input
-                        type="checkbox"
-                        name="skipper1"
-                        id="skipper"
-                        checked=""
-                      />
-                      <label for="skipper"
-                        ><span></span>I have read the privacy & policy</label
-                      >
-                    </div>
-                    <div class="footer-widget__social">
-                      <p class="footer-widget__social-title">Follow us</p>
-                      <ul class="footer-widget__social-list list-unstyled">
-                        <li>
-                          <a href="#"
-                            ><span class="icon-facebook-app-symbol"></span
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="#"><span class="icon-social"></span></a>
-                        </li>
-                        <li>
-                          <a href="#"><span class="icon-instagram"></span></a>
-                        </li>
-                        <li>
-                          <a href="#"><span class="icon-linkedin"></span></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
@@ -743,17 +664,11 @@
 
         <div class="site-footer__bottom">
           <div class="container">
-            <div class="site-footer__bottom-inner">
+            <div class="site-footer__bottom-inner justify-content-center">
               <p class="site-footer__bottom-text">
                 Copyright © 2025 <a href="#">Index Consultation.</a> All Rights
                 Reserved.
               </p>
-              <ul class="list-unstyled site-footer__bottom-menu">
-                <li><a href="about.html">About us</a></li>
-                <li><a href="about.html">Careers</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="about.html">Cookie Policy</a></li>
-              </ul>
             </div>
           </div>
         </div>
