--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <i class="icon-location-1"></i>
                             </div>
                             <div class="text">
-                                <p>23/DownTown Cairo, Egypt</p>
+                                <p>Villa 14,72 St. Maadi-Cairo</p>
                             </div>
                         </li>
                         <li>
@@ -976,8 +976,8 @@
                                     </li>
                                     <li>
                                         <p class="footer-widget-two__contact-title">Location</p>
-                                        <p class="footer-widget-two__contact-location">23/DownTown
-                                            <br> Cairo, Egypt
+                                        <p class="footer-widget-two__contact-location">Villa 14,72 St.
+                                            <br> Maadi, Cairo
                                         </p>
                                     </li>
                                 </ul>
