--- a/services-details.html
+++ b/services-details.html
@@ -94,7 +94,7 @@
                   <i class="icon-location-1"></i>
                 </div>
                 <div class="text">
-                  <p>23/DownTown Cairo, Egypt</p>
+                  <p>Villa 14,72 St. Maadi-Cairo</p>
                 </div>
               </li>
               <li>
@@ -336,7 +336,7 @@
                     >
                       <li>
                         <i class="icon-location-1"></i>
-                        <p>23/DownTown Cairo, Egypt</p>
+                        <p>Villa 14,72 St. Maadi-Cairo</p>
                       </li>
                       <li>
                         <i class="icon-telephone-call"></i>
@@ -808,8 +808,8 @@
                       <li>
                         <p class="footer-widget__contact-title">Location</p>
                         <p class="footer-widget__contact-location">
-                          23/DownTown <br />
-                          Cairo, Egypt
+                          Villa 14,72 St. <br />
+                          Maadi - Cairo
                         </p>
                       </li>
                     </ul>
