--- a/index-ar.html
+++ b/index-ar.html
@@ -630,14 +630,14 @@
                         <div class="faq-one__right">
                             <div class="section-title text-left">
                                 <div class="section-title__tagline-box">
-                                    <p class="section-title__tagline">ميزة حصرية</p>
+                                    <p class="section-title__tagline">ميزات حصرية</p>
                                 </div>
                                 <h2 class="section-title__title">نمو حقيقي للأعمال
                                     <br> نزاهة جيدة
                                 </h2>
                             </div>
-                            <p class="faq-one__text">Moving every have you landing beast faces have behold one things
-                                sign fourth evening saying</p>
+                            <!-- <p class="faq-one__text">Moving every have you landing beast faces have behold one things
+                                sign fourth evening saying</p> -->
                             <div class="faq-one__faq-box">
                                 <div class="accrodion-grp" data-grp-name="faq-one-accrodion">
                                     <div class="accrodion">
@@ -1041,119 +1041,6 @@
         </section>
         <!--Project Two End -->
 
-        <!--Testimonial Two Start -->
-        <section class="testimonial-two">
-            <div class="testimonial-two__bg-shape"
-                style="background-image: url(assets/images/shapes/testimonial-two-bg-shape.jpg);"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-5 col-lg-12">
-                        <div class="testimonial-two__left">
-                            <div class="section-title text-left">
-                                <div class="section-title__tagline-box">
-                                    <p class="section-title__tagline">Our client feedback</p>
-                                </div>
-                                <h2 class="section-title__title">Happy client feedback
-                                    <br> about service
-                                </h2>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-7 col-lg-12">
-                        <div class="testimonial-two__right">
-                            <div class="testimonial-two__carousel owl-carousel owl-theme thm-owl__carousel"
-                                data-owl-options='{
-                                "loop": true,
-                                "autoplay": true,
-                                "margin": 30,
-                                "nav": true,
-                                "dots": false,
-                                "smartSpeed": 500,
-                                "autoplayTimeout": 10000,
-                                "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"],
-                                "responsive": {
-                                    "0": {
-                                        "items": 1
-                                    },
-                                    "768": {
-                                        "items": 1
-                                    },
-                                    "992": {
-                                        "items": 1
-                                    },
-                                    "1200": {
-                                        "items": 1.60999999999
-                                    }
-                                }
-                            }'>
-                                <!--Testimonial Two Single Start-->
-                                <div class="item">
-                                    <div class="testimonial-two__single">
-                                        <div class="testimonial-two__shape-1">
-                                            <img src="assets/images/shapes/testimonial-two-shape-1.png" alt="">
-                                        </div>
-                                        <div class="testimonial-two__ratting">
-                                            <span class="icon-star-1"></span>
-                                            <span class="icon-star-1"></span>
-                                            <span class="icon-star-1"></span>
-                                            <span class="icon-star-half-empty"></span>
-                                            <span class="icon-star-half-empty"></span>
-                                        </div>
-                                        <p class="testimonial-two__text">Praesent bibendum praesent anterule conubia
-                                            integer convallis egete site commodo proin fermentum nostra egesta
-                                            lacinia adiso dictumst tempu placerat tempus ligula mattis marketing
-                                            fusce sagittis ridiculus laoreet alison pellentesque.</p>
-                                        <div class="testimonial-two__client-info-box">
-                                            <div class="testimonial-two__client-img">
-                                                <img src="assets/images/testimonial/testimonial-two-client-img-1.jpg"
-                                                    alt="">
-                                            </div>
-                                            <div class="testimonial-two__client-info">
-                                                <h3>Cory Anderson</h3>
-                                                <p>Head of Director “Keystone Group” </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--Testimonial Two Single End-->
-                                <!--Testimonial Two Single Start-->
-                                <div class="item">
-                                    <div class="testimonial-two__single">
-                                        <div class="testimonial-two__shape-1">
-                                            <img src="assets/images/shapes/testimonial-two-shape-1.png" alt="">
-                                        </div>
-                                        <div class="testimonial-two__ratting">
-                                            <span class="icon-star-1"></span>
-                                            <span class="icon-star-1"></span>
-                                            <span class="icon-star-1"></span>
-                                            <span class="icon-star-half-empty"></span>
-                                            <span class="icon-star-half-empty"></span>
-                                        </div>
-                                        <p class="testimonial-two__text">Praesent bibendum praesent anterule conubia
-                                            integer convallis egete site commodo proin fermentum nostra egesta
-                                            lacinia adiso dictumst tempu placerat tempus ligula mattis marketing
-                                            fusce sagittis ridiculus laoreet alison pellentesque.</p>
-                                        <div class="testimonial-two__client-info-box">
-                                            <div class="testimonial-two__client-img">
-                                                <img src="assets/images/testimonial/testimonial-two-client-img-2.jpg"
-                                                    alt="">
-                                            </div>
-                                            <div class="testimonial-two__client-info">
-                                                <h3>Jimy Anderson</h3>
-                                                <p>Head of Director “Keystone Group” </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--Testimonial Two Single End-->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--Testimonial Two End -->
-
         <!--Brand Two Start-->
         <section class="brand-one brand-two">
             <div class="container">
@@ -1163,8 +1050,8 @@
                     </div>
                     <h2 class="section-title-two__title">عملاء موثوقون عالميًا</h2>
                 </div>
-                <p class="brand-two__text">Consequat dapibus duis nunc taciti nascetur pede pulvinar penatibus taciti
-                    leo hymenaeos<br> manchester road libero cras dis eget magnis nulla corporte ornare</p>
+                <!-- <p class="brand-two__text">Consequat dapibus duis nunc taciti nascetur pede pulvinar penatibus taciti
+                    leo hymenaeos<br> manchester road libero cras dis eget magnis nulla corporte ornare</p> -->
                 <div class="brand-one__inner">
                     <div class="thm-swiper__slider swiper-container" data-swiper-options='{"spaceBetween": 100,
                     "slidesPerView": 5,
@@ -1252,85 +1139,113 @@
         </section>
         <!--Google Map End-->
 
-        <!--Site Footer Two Start-->
-        <footer class="site-footer-two">
-            <div class="site-footer-two__bg-shape"
-                style="background-image: url(assets/images/shapes/site-footer-two-bg-shape.jpg);"></div>
-            <div class="site-footer-two__top">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
-                            <div class="footer-widget-two__column footer-widget-two__about">
-                                <h3 class="footer-widget-two__about-title">دعونا نبدأ المشروع</h3>
-                                <p class="footer-widget-two__about-text">Neque eget porttitor fermentum congue duis
-                                    natoque had amcorper a torquent vulputate donec conubian tempor nibhe tortor
-                                    pharetra over the dictum.</p>
-                                <div class="footer-widget-two__btn-box">
-                                    <a href="contact.html" class="footer-widget-two__btn thm-btn">اتصل بنا<span
-                                            class="icon-right-arrow"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
-                            <div class="footer-widget-two__column footer-widget-two__services">
-                                <div class="footer-widget-two__title-box">
-                                    <h3 class="footer-widget-two__title">خدماتنا</h3>
-                                </div>
-                                <ul class="footer-widget-two__services-list list-unstyled">
-                                    <li>
-                                        <a href="services-details.html">تجربة العملاء</a>
-                                    </li>
-                                    <li>
-                                        <a href="services-details.html">استراتيجية الأعمال</a>
-                                    </li>
-                                    <li>
-                                        <a href="services-details.html">تطوير القيادة</a>
-                                    </li>
-                                    <li>
-                                        <a href="services-details.html">تغيير الثقافة</a>
-                                    </li>
-                                    <li>
-                                        <a href="services-details.html">الهندسة والتحسين</a>
-                                    </li>
-                                    <li>
-                                        <a href="services-details.html">الموارد البشرية</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-6 col-md-6 mt-xl-0 mt-4 wow fadeInUp" data-wow-delay="200ms">
-                            <div class="footer-widget-two__column footer-widget-two__contact">
-                                <div class="footer-widget-two__title-box">
-                                    <h3 class="footer-widget-two__title">تواصل معنا</h3>
-                                </div>
-                                <ul class="footer-widget-two__contact-list list-unstyled">
-                                    <li>
-                                        <p class="footer-widget-two__contact-title">الهاتف</p>
-                                        <p class="footer-widget-two__contact-location"><a href="tel:+201013714343">+20 101 3714 343</a></p>
-                                    </li>
-                                    <li>
-                                        <p class="footer-widget-two__contact-title">الموقع</p>
-                                        <p class="footer-widget-two__contact-location">فيلا 14،72 شارع 
-                                            <br> المعادي - القاهرة
-                                        </p>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+      <!--Site Footer Start-->
+      <footer class="site-footer">
+        <div
+          class="site-footer__shape1"
+          style="
+            background-image: url(assets/images/shapes/site-footer-shape1.jpg);
+          "
+        ></div>
+        <div class="site-footer__middle">
+          <div class="container">
+            <div class="site-footer__middle-inner">
+              <div class="row">
+                <div
+                  class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp"
+                  data-wow-delay="100ms"
+                >
+                  <div class="footer-widget__column footer-widget__about">
+                    <div class="footer-widget__logo">
+                      <a href="index.html"
+                        ><img
+                          src="assets/images/resources/logo3.png"
+                          alt=""
+                          width="250"
+                      /></a>
                     </div>
-                </div>
-            </div>
-            <div class="site-footer-two__bottom">
-                <div class="container">
-                    <div class="site-footer-two__bottom-inner justify-content-center">
-                        <p class="site-footer-two__bottom-text">حقوق الطبع والنشر © 2025 <a href="#">Index Consultation.</a>
-                            جميع
-                            الحقوق محفوظة.</p>
+                    <p class="footer-widget__about-text">
+                      Neque porttitor fermentum congue duis<br />
+                      natoque had amcorp torquent vulputate<br />
+                      donec tren conubian
+                    </p>
+                    <div class="footer-widget__emergency-call">
+                      <p>Emergency</p>
+                      <a href="tel:+201013714343">+20 101 3714 343</a>
                     </div>
+                  </div>
                 </div>
+                <div
+                  class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp"
+                  data-wow-delay="200ms"
+                >
+                  <div class="footer-widget__column footer-widget__services">
+                    <div class="footer-widget__title-box">
+                      <h3 class="footer-widget__title">خدماتنا</h3>
+                    </div>
+                    <ul class="footer-widget__services-list list-unstyled">
+                      <li>
+                        <a href="about.html">تجربة العملاء</a>
+                      </li>
+                      <li>
+                        <a href="about.html">استراتيجية الأعمال</a>
+                      </li>
+                      <li>
+                        <a href="about.html">تطوير القيادة</a>
+                      </li>
+                      <li>
+                        <a href="about.html">تغيير الثقافة</a>
+                      </li>
+                      <li>
+                        <a href="about.html">الهندسة والتحسين</a>
+                      </li>
+                      <li>
+                        <a href="about.html">الموارد البشرية</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div
+                  class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp"
+                  data-wow-delay="200ms"
+                >
+                  <div class="footer-widget__column footer-widget__contact">
+                    <div class="footer-widget__title-box">
+                      <h3 class="footer-widget__title">تواصل معنا</h3>
+                    </div>
+                    <ul class="footer-widget__contact-list list-unstyled">
+                      <li>
+                        <p class="footer-widget__contact-title">الهاتف</p>
+                        <p class="footer-widget__contact-location">
+                          <a href="tel:+201013714343">+20 101 3714 343</a>
+                        </p>
+                      </li>
+                      <li>
+                        <p class="footer-widget__contact-title">العنوان</p>
+                        <p class="footer-widget__contact-location">
+                          Villa 14,72 St. <br />
+                          Maadi - Cairo
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
-        </footer>
-        <!--Site Footer End-->
+          </div>
+        </div>
+
+        <div class="site-footer__bottom">
+          <div class="container">
+            <div class="site-footer__bottom-inner justify-content-center">
+              <p class="site-footer__bottom-text">
+                حقوق النشر © 2025 <a href="#">Index Consultation.</a> جميع الحقوق محفوظة.
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!--Site Footer End-->
 
 
     </div><!-- /.page-wrapper -->
