--- a/index.html
+++ b/index.html
@@ -918,85 +918,114 @@
         </section>
         <!--Google Map End-->
 
-        <!--Site Footer Two Start-->
-        <footer class="site-footer-two">
-            <div class="site-footer-two__bg-shape"
-                style="background-image: url(assets/images/shapes/site-footer-two-bg-shape.jpg);"></div>
-            <div class="site-footer-two__top">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
-                            <div class="footer-widget-two__column footer-widget-two__about">
-                                <h3 class="footer-widget-two__about-title">Let’s Project</h3>
-                                <p class="footer-widget-two__about-text">Neque eget porttitor fermentum congue duis
-                                    natoque had amcorper a torquent vulputate donec conubian tempor nibhe tortor
-                                    pharetra over the dictum.</p>
-                                <div class="footer-widget-two__btn-box">
-                                    <a href="contact.html" class="footer-widget-two__btn thm-btn">Contact Us<span
-                                            class="icon-right-arrow"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
-                            <div class="footer-widget-two__column footer-widget-two__services">
-                                <div class="footer-widget-two__title-box">
-                                    <h3 class="footer-widget-two__title">Our Service</h3>
-                                </div>
-                                <ul class="footer-widget-two__services-list list-unstyled">
-                                    <li>
-                                        <a href="services-details.html">Customer Experience</a>
-                                    </li>
-                                    <li>
-                                        <a href="services-details.html">Business Strategy</a>
-                                    </li>
-                                    <li>
-                                        <a href="services-details.html">Leadership Development</a>
-                                    </li>
-                                    <li>
-                                        <a href="services-details.html">Culture Change</a>
-                                    </li>
-                                    <li>
-                                        <a href="services-details.html">Engineering & Optimization</a>
-                                    </li>
-                                    <li>
-                                        <a href="services-details.html">Human Resource</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-6 col-md-6 mt-xl-0 mt-4 wow fadeInUp" data-wow-delay="200ms">
-                            <div class="footer-widget-two__column footer-widget-two__contact">
-                                <div class="footer-widget-two__title-box">
-                                    <h3 class="footer-widget-two__title">Find Us Here</h3>
-                                </div>
-                                <ul class="footer-widget-two__contact-list list-unstyled">
-                                    <li>
-                                        <p class="footer-widget-two__contact-title">Phone</p>
-                                        <p class="footer-widget-two__contact-location"><a href="tel:+201013714343">+20 101 3714 343</a></p>
-                                    </li>
-                                    <li>
-                                        <p class="footer-widget-two__contact-title">Location</p>
-                                        <p class="footer-widget-two__contact-location">Villa 14,72 St.
-                                            <br> Maadi, Cairo
-                                        </p>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+      <!--Site Footer Start-->
+      <footer class="site-footer">
+        <div
+          class="site-footer__shape1"
+          style="
+            background-image: url(assets/images/shapes/site-footer-shape1.jpg);
+          "
+        ></div>
+        <div class="site-footer__middle">
+          <div class="container">
+            <div class="site-footer__middle-inner">
+              <div class="row">
+                <div
+                  class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp"
+                  data-wow-delay="100ms"
+                >
+                  <div class="footer-widget__column footer-widget__about">
+                    <div class="footer-widget__logo">
+                      <a href="index.html"
+                        ><img
+                          src="assets/images/resources/logo3.png"
+                          alt=""
+                          width="250"
+                      /></a>
                     </div>
-                </div>
-            </div>
-            <div class="site-footer-two__bottom">
-                <div class="container">
-                    <div class="site-footer-two__bottom-inner justify-content-center">
-                        <p class="site-footer-two__bottom-text">Copyright © 2025 <a href="#">Index Consultation.</a>
-                            All
-                            Rights Reserved.</p>
+                    <p class="footer-widget__about-text">
+                      Neque porttitor fermentum congue duis<br />
+                      natoque had amcorp torquent vulputate<br />
+                      donec tren conubian
+                    </p>
+                    <div class="footer-widget__emergency-call">
+                      <p>Emergency</p>
+                      <a href="tel:+201013714343">+20 101 3714 343</a>
                     </div>
+                  </div>
                 </div>
+                <div
+                  class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp"
+                  data-wow-delay="200ms"
+                >
+                  <div class="footer-widget__column footer-widget__services">
+                    <div class="footer-widget__title-box">
+                      <h3 class="footer-widget__title">Our Service</h3>
+                    </div>
+                    <ul class="footer-widget__services-list list-unstyled">
+                      <li>
+                        <a href="about.html">Customer Experience</a>
+                      </li>
+                      <li>
+                        <a href="about.html">Business Strategy</a>
+                      </li>
+                      <li>
+                        <a href="about.html">Leadership Development</a>
+                      </li>
+                      <li>
+                        <a href="about.html">Culture Change</a>
+                      </li>
+                      <li>
+                        <a href="about.html">Engineering & Optimization</a>
+                      </li>
+                      <li>
+                        <a href="about.html">Human Resource</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div
+                  class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp"
+                  data-wow-delay="200ms"
+                >
+                  <div class="footer-widget__column footer-widget__contact">
+                    <div class="footer-widget__title-box">
+                      <h3 class="footer-widget__title">Contact us</h3>
+                    </div>
+                    <ul class="footer-widget__contact-list list-unstyled">
+                      <li>
+                        <p class="footer-widget__contact-title">Phone</p>
+                        <p class="footer-widget__contact-location">
+                          <a href="tel:+201013714343">+20 101 3714 343</a>
+                        </p>
+                      </li>
+                      <li>
+                        <p class="footer-widget__contact-title">Location</p>
+                        <p class="footer-widget__contact-location">
+                          Villa 14,72 St. <br />
+                          Maadi - Cairo
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
-        </footer>
-        <!--Site Footer End-->
+          </div>
+        </div>
+
+        <div class="site-footer__bottom">
+          <div class="container">
+            <div class="site-footer__bottom-inner justify-content-center">
+              <p class="site-footer__bottom-text">
+                Copyright © 2025 <a href="#">Index Consultation.</a> All Rights
+                Reserved.
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!--Site Footer End-->
 
 
     </div><!-- /.page-wrapper -->
